--- a/tax.html
+++ b/tax.html
@@ -2,5 +2,6 @@
     <span style="font-size:4cm;">
         <span>繳稅測試</span></br>
         <a href="epayTax-01702://epay/tax">空的繳稅</a></br>
+        <a href="epaytax-01702://epay/tax?paymentType=15001&tax=irxp&seqNo=1070047627&txnAmount=4600">X1535</a></br>
     </span>
 </html>
