--- a/tax.html
+++ b/tax.html
@@ -3,5 +3,6 @@
         <span>繳稅測試</span></br>
         <a href="epayTax-01702://epay/tax">空的繳稅</a></br>
         <a href="epaytax-01702://epay/tax?paymentType=15001&tax=irxp&seqNo=1070047627&txnAmount=4600">X1535</a></br>
+        <a href="twmpgo-01702://qrcode.payment.twmpgo/v1/notifyInfo">空的twmp網路購物</a></br>
     </span>
 </html>
