--- a/tax.html
+++ b/tax.html
@@ -4,5 +4,6 @@
         <a href="epaytax-01702://epay/tax">空的繳稅</a></br>
         <a href="epaytax-01702://epay/tax?paymentType=15001&tax=irxp&seqNo=1070047627&txnAmount=4600">X1535</a></br>
         <a href="twmpgo-01702://qrcode.payment.twmpgo/v1/notifyInfo">空的twmp網路購物</a></br>
+        <a href="twmpgo-01702://qrcode.payment.twmpgo/v1/notifyInfo?qrcode=NVmSVrlG/J5po5T+a9wuvbUa63zGtldH0a74O9K4xn7Ta9YGDruTH9osen3VN5eIZW5Eh7JI8+at9Yj+DjfP0q3Jz2DIklHRiV4bDqAzk8lS1f7ylibEaNZ6Zxnr53km0vjjmlt/f9ywUVqZsTulyhwBFBWTZdDAzb+2VpecnafxuY6ytarz3VQRMltmKQ3GtTfysUw8gCLlRwcL9+GPt9Y/n+E7S3QCnK4X1KHUefmPQcLs0c3Cjz/mzd2qbynCnMdaDkRfpjY=&callbackUrl=https%3A%2F%2Fmerchantt.twmp.com.tw%3A10443%2FWebQR%2Fui%2FHceAppCallBack%3FtxnID%3D684410514079617024">有資料twmp網路購物</a></br>
     </span>
 </html>
