--- a/alert.html
+++ b/alert.html
@@ -1,5 +1,5 @@
 <html>
   <span style="font-size:3cm;">
-    <a href="javascript:alert("Hello\nHow are you?");">Click me</a>
+    <a href="javascript:alert(\"Hello\nHow are you?\");">Click me</a>
   </span
 </html>
