--- a/line.html
+++ b/line.html
@@ -10,7 +10,7 @@
     </span>
      <span style="font-size:3cm;">
         <span>OLD</span></br>
-          <a href="megabank.mbApp://openApp?system=LineBC&data=AnTUkcf7BuJn0BzMs6n36hUQfh4GDa4R0x7pG1tHjc9eXqNLTxUvWihwyWNPOBfmbywFsWH+/yDKo3W7Nfcx2A==">匯率免登入</a></br>
+          <a href="megabank.mbApp://openApp?system=LineBC&data=RJlbXB7sdvA7erKVUoEexHXIepJZhe4XtVSY2fsMNVw49arJR0Sx/hLcr9hX6YcO3VKdvEUxdxtNk+dvHX9noQ==">匯率NO登入</a></br>
         <a href="megabank.mbApp://openApp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUv64FK4DivA+re1SucTSnNj4u2V1SWEfmMQeZL1VAGPCds0Xt3u770qo1S1+2k7vmw==">外幣>匯入明細</a></br>
           <a href="megabank.mbApp://openApp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUv64FK4DivA+re1SucTSnNj4u2V1SWEfmMQeZL1VAGPCZ4V849/7ODTIVHrSLJzuVZ+PWXbjHmsJ1XpLxQHm078uCZL1/xq0W/BaBGtb6NFF">外幣>匯入明細-過期</a></br>
           <a href="megabank.mbApp://openApp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUv64FK4DivA+re1SucTSnNj4u2V1SWEfmMQeZL1VAGPCZ4V849/7ODTIVHrSLJzuVRNqd/5u+kBo0/DKU9BCP7pz/G8e49QMc0rWEjlMgMyd">外幣>匯入明細-沒過期</a></br>
