--- a/line.html
+++ b/line.html
@@ -2,7 +2,7 @@
       
      <span style="font-size:3cm;">
         <span>NEW</span></br>
-        <a href="https://twilight33.github.io/openApp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUv64FK4DivA+re1SucTSnNj4u2V1SWEfmMQeZL1VAGPCds0Xt3u770qo1S1+2k7vmw==">外幣>匯入明細</a></br>
+        <a href="https://twilight33.github.io/nmb/openApp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUv64FK4DivA+re1SucTSnNj4u2V1SWEfmMQeZL1VAGPCds0Xt3u770qo1S1+2k7vmw==">外幣>匯入明細</a></br>
         <a href="https://twilight33.github.io/nmb/openApp?system=LineBC&data=k4rMbWmfZwdhHtvrOWTwUv64FK4DivA+re1SucTSnNgDfzNwTKvRcVqEFsHv6chreF3l2N3bCJVHIuCzxrGjog==">外幣>匯入明細</a></br>
        <a href="https://twilight33.github.io/nmb/openApp?system=LineBC&data=gGep/ip8Lc8frcp6YkvpNwywOxq9vJovHPLGG+7B/kE=">台幣>存款交易明細</a></br>
        <a href="https://twilight33.github.io/nmb/openApp?system=LineBC&data=Stub+KGC6PHY0GRWsWv5oogLzaEy4LjA0FNfx+Ruvs8=">外幣>存款交易明細</a></br>
